<resources>
    <string name="app_name">Ad-dukkan</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_conversation">No conversation</string>
    <string name="password">Password</string>
    <string name="password_short">Password is too short</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="change_language">Change Language</string>
    <string name="details">Details</string>
    <string name="amount">Amount</string>
    <string name="products">Products</string>
    <string name="bill_number">Bill number</string>
    <string name="price">Price</string>
    <string name="pay">Pay</string>
    <string name="done">Done</string>
    <string name="user_not_found">user not found</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="ch_image">Choose image</string>
    <string name="suc">Success!</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="name">Name</string>
    <string name="update">Update Profile</string>
    <string name="next">Next</string>
    <string name="order">order</string>
    <string name="ok2">Ok</string>
    <string name="ask_a_doctor">Ask A Doctor</string>
    <string name="search2">Search</string>
    <string name="specialization">Specialization</string>
    <string name="ratings">Ratings</string>
    <string name="ask_now">Ask Now</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="dukkans">Dokan Beauty</string>
    <string name="offers">Offers</string>
    <string name="ask_doctor">Ask Doctor</string>
    <string name="medical_prescription">Medical prescription</string>
    <string name="my_orders">My orders</string>
    <string name="favorite">Favorite</string>
    <string name="chats">Chats</string>
    <string name="country">Country</string>
    <string name="chat_with_admin">Chat with admin</string>
    <string name="contact_us">Contact us</string>
    <string name="social_media">Social media</string>
    <string name="don_t_have_account_sign_up"><![CDATA[Don\'t have account?  <font color="#3AB54A">Sign Up</font>]]></string>
    <string name="sign_up_text"><![CDATA[Already have account?  <font color="#3AB54A">Log in</font>]]></string>
    <string name="please_enter_code_sent_to">Please enter code sent to</string>
    <string name="resend">Resend in :</string>
    <string name="resend2">Resend</string>
    <string name="inv_code">Invalid Code</string>
    <string name="verification_code">Verification code</string>
    <string name="upload_your_prescription_and_we_will_contact_you_via_e_mail">Upload your prescription and we will contact you via e-mail</string>
    <string name="ch_country">Choose country</string>
    <string name="show_all">Show All</string>
    <string name="recently_arrived">Recently Arrived</string>
    <string name="most_seller">Most Seller</string>
    <string name="buy">Buy </string>
    <string name="product"> Product </string>
    <string name="and_got"> And Got </string>
    <string name="bouns"> As Bouns </string>
    <string name="rate">Rate</string>
    <string name="recently">Recently</string>
    <string name="low_price">Low Price</string>
    <string name="high_price">High Price</string>
    <string name="filter_your_results">Filter your Results</string>
    <string name="department">Department</string>
    <string name="company">Company</string>
    <string name="the_brand">The brand</string>
    <string name="reset">Reset</string>
    <string name="activation">Activation</string>
    <string name="message">Message</string>
    <string name="not_avail_now">Not Available Now</string>
    <string name="suc_and">Successfully completed and we will contact you</string>
    <string name="ph_found">Phone number found</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="copoun">Coupon</string>
    <string name="expierd">Expierd</string>
    <string name="not_found">Not Found</string>
    <string name="buy2">Buy</string>
    <string name="location_information">Location information</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="write_more_details">Write more details</string>
    <string name="location_detials">Location Detials</string>
    <string name="location">Location</string>
    <string name="the_total_of_the_cart">The total of the cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="copoun2">Coupon</string>
    <string name="total_payments">Total payments</string>
    <string name="paiement_when_recieving">Paiement when recieving</string>
    <string name="electronic_payment">Electronic payment</string>
    <string name="payment_type">Payment Type</string>
    <string name="the_request_has_been_confirmed_successfully">The request has been confirmed successfully</string>
    <string name="order_num">Order Num</string>
    <string name="no_product">No Product Found</string>
    <string name="no_image">No Images</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="no_comments">No comments</string>
    <string name="similar_products">Similar products:-</string>
    <string name="admin">Admin</string>
    <string name="voice_uploaded">Voice uploaded</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="upload_cart">Upload Cart</string>
    <string name="added_suc">Added to cart successfully</string>

</resources>