<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="backListener"
            type="com.addukkan.interfaces.Listeners.BackListener" />
        <variable
            name="model"
            type="com.addukkan.models.CartDataModel.Data" />
        <variable
            name="lang"
            type="String" />
        <variable
            name="cartCount"
            type="String" />


    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:onClick="@{()->backListener.back()}"
                android:padding="10dp"
                android:rotation='@{lang.equals("ar")?180:0}'
                android:src="@drawable/ic_left_arrow"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"

            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:visibility="gone" />


        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >



                <EditText

                    android:id="@+id/edtCopun"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lines="2"
                    android:layout_marginStart="8dp"
                    android:hint="@string/copoun"
                    android:textSize="13sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:background="@drawable/rounded_gray9"


                    tools:ignore="RtlCompat" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/btcheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="3dp"
                    android:text="@string/activation"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_primary"
                    />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="0dp" />


            </LinearLayout>
            <ProgressBar
                android:id="@+id/progBarcopun"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
android:visibility="gone"
                />


        </FrameLayout>


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/white"
    android:layout_gravity="bottom"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        >
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text='@{@string/total+model.total_price}'
                android:textColor="@color/black"
                android:textSize="16sp" />

        </FrameLayout>
        <Button
            android:id="@+id/btBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:text="@string/buy2"
            android:textColor="@color/white"
            android:background="@drawable/rounded_primary"
            />
    </LinearLayout>
</FrameLayout>
</FrameLayout>



</layout>



