<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="lang"
        type="String" />
</data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/gray1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                >
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab"
                    android:layout_width="wrap_content"
                    android:layout_height="7dp"
                    app:tabGravity="center"
                    app:tabMaxWidth="4dp"
                    app:tabIndicatorHeight="0dp"
                    app:tabMode="scrollable"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="8dp"
                    app:tabBackground="@drawable/tab_indicator"
                    />

                <ProgressBar
                    android:id="@+id/progBarSlider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                >
                <androidx.cardview.widget.CardView
                   android:id="@+id/cardaskdoctor"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="5dp"
                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/image2"
                            android:scaleX="1.25"
                            android:scaleY="1.25"
                            />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            >
                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/ic_ask"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:text="@string/ask_doctor"
                                />
                        </LinearLayout>
                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardroshta"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="5dp"

                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/image1"
                            android:scaleX="1.25"
                            android:scaleY="1.25"
                            />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            >
                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/ic_prescription"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:text="@string/medical_prescription"
                                />
                        </LinearLayout>

                    </FrameLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />
                <ProgressBar
                    android:id="@+id/progBarCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />
                <ProgressBar
                    android:id="@+id/progBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:weightSum="1">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimary"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/recently_arrived"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/show_all"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />


                </FrameLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("en")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    app:tint="@color/colorAccent" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewrecent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />
                <ProgressBar
                    android:id="@+id/progBarrecent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="3dp"
                android:weightSum="1">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimary"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/most_seller"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/show_all"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />


                </FrameLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("en")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    app:tint="@color/colorAccent" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewmostsell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />
                <ProgressBar
                    android:id="@+id/progBarmostsell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    />
            </FrameLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>